# techcs-236347

./: .gitignore  README.md  pyproject.toml  requirements.txt
ex1/: lambda_types.py  solution.py  test.py  test_ex1.py
ex1/src/lambda_calc/: lambda_types.py  syntax.py
ex1/syntax/: while_lang.py
ex2/: lists.v
ex3/: solution.py  test_ex3.py  tests.py  wp.py
lab1/: solution.py  test_lab1.py
lab11/synquid-examples/: AddressBook-Make.sq  AddressBook-Merge.sq  BST-Delete.sq  BST-ExtractMin.sq  BST-Insert.sq  BST-Member.sq  BST-Sort.sq  BV-add.sq  BV-dec.sq  BV-inc.sq  BinHeap-Insert.sq  BinHeap-Member.sq  Evaluator.sq  IncList-Merge.sq  IncList-MergeSort.sq  IncList-PivotAppend.sq  IncList-QuickSort.sq  Int-Add.sq  List-All.sq  List-Append.sq  List-Compress.sq  List-Concat.sq  List-Delete.sq  List-Drop.sq  List-Elem.sq  List-ElemIndex.sq  List-ExtractMin.sq  List-Filter.sq  List-Fold-Append.sq  List-Fold-Length.sq  List-Fold-Sort.sq  List-Fold.sq  List-InsertSort.sq  List-Intersection.sq  List-Ith.sq  List-Nub.sq  List-Null.sq  List-Partition.sq  List-Product.sq  List-Replicate.sq  (+13 more)
lab11/synquid-examples/AVL/: AVL-BalL0.sq  AVL-BalLL.sq  AVL-BalLR.sq  AVL-BalR0.sq  AVL-BalRL.sq  AVL-BalRR.sq  AVL-Balance.sq  AVL-Delete.sq  AVL-ExtractMin.sq  AVL-Insert.sq  AVL-Solution.sq
lab5/: mccarthy.py
lab6/: euclid.v
lab7/: pix.py  puzzles.py
lab9/: main.cpp  scanner.sk
syntax/: lambda_pure.lark  lambda_pure.py  lambda_typed.lark  lambda_typed.py  test_lambda_pure.py  test_lambda_typed.py  test_while_lang.py  utils.py  while_lang.lark  while_lang.py
(+13 files in other folders)
